[tool.poetry]
name = "linear-optimization"
version = "0.1.0"
description = ""
authors = ["Valdemar Emil Otte Petersen <36330221+ValdemarOtte@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "linear_optimization"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
mypy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
